--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -13,9 +13,9 @@ genome_gff = "/scratch/lustre/home/vira9982/transcriptomics/reference/gencode.v4
 #Rule all: final target files
 rule all:
     input:
-        expand("results/fastqc/{sample}_fastqc.html", sample=samples),
-        expand("results/fastqc/{sample}_fq_fastqc.html", sample=samples),
-        expand("results/fastp/{sample}_fq.gz", sample=samples),
+        expand("results/fastqc/{sample}_raw_fastqc.html", sample=samples),
+        expand("results/fastqc/{sample}_trimmed_fastqc.html", sample=samples),
+        expand("results/trim_galore/{sample}_trimmed.fq.gz", sample=samples),
         expand("results/tophat/{sample}/accepted_hits_{sample}.bam", sample=samples),
         "results/counts.txt",
         "results/multiqc_report.html"
@@ -23,36 +23,44 @@ rule all:
 rule fastqc:
     input:
         fq1 = lambda wildcards: f"{input_path}/{wildcards.sample}.fastq.gz",
-        fq2 = lambda wildcards: f"results/fastp/{wildcards.sample}_fq.gz"
+        fq2 = lambda wildcards: f"results/trim_galore/{wildcards.sample}_trimmed.fq.gz"
     output:
-        html1 = "results/fastqc/{sample}_fastqc.html",
-        html2 = "results/fastqc/{sample}_fq_fastqc.html",
-        zip1 = "results/fastqc/{sample}_fastqc.zip",
-        zip2 = "results/fastqc/{sample}_fq_fastqc.zip"
+        html1 = "results/fastqc/{sample}_raw_fastqc.html",
+        html2 = "results/fastqc/{sample}_trimmed_fastqc.html",
+        zip1 = "results/fastqc/{sample}_raw_fastqc.zip",
+        zip2 = "results/fastqc/{sample}_trimmed_fastqc.zip"
     conda: "envs/preprocess_rnaseq.yaml"
     threads: 4
     shell:
         """
             fastqc -t {threads} --outdir results/fastqc {input.fq1} {input.fq2}
+
+            mv results/fastqc/{wildcards.sample}_fastqc.html {output.html1}
+            mv results/fastqc/{wildcards.sample}_fastqc.zip {output.zip1}
         """
 
-rule fastp:
+rule trimGalore:
     input:
         fq = lambda wildcards: f"{input_path}/{wildcards.sample}.fastq.gz"
     output:
-        fp = "results/fastp/{sample}_fq.gz",
-        html = "results/fastp/{sample}_fq.html",
-        json = "results/fastp/{sample}_fq.json"
+        fq = "results/trim_galore/{sample}_trimmed.fq.gz"
     conda: "envs/preprocess_rnaseq.yaml"
     threads: 4
+    params:
+        quality = 25,
+        length = 20
     shell:
         """
-            fastp -i {input.fq} -o {output.fp} -h {output.html} -j {output.json} -w {threads} 
+            trim_galore -o results/trim_galore \
+            -q {params.quality} \
+            -j {threads} \
+            --length {params.length} \
+            {input.fq}
         """
         
 rule tophat:
     input:
-        fq = "results/fastp/{sample}_fq.gz"
+        fq = "results/trim_galore/{sample}_trimmed.fq.gz"
     output:
         bam = "results/tophat/{sample}/accepted_hits.bam",
         bai = "results/tophat/{sample}/accepted_hits.bam.bai",
@@ -71,7 +79,7 @@ rule tophat:
             samtools index {output.bam}
         """
 
-rule rename_align_summary:
+rule rename_align_files:
     input:
         old_bam = "results/tophat/{sample}/accepted_hits.bam",
         old_bai = "results/tophat/{sample}/accepted_hits.bam.bai",
@@ -97,23 +105,23 @@ rule featureCounts:
     threads: 8
     shell:
         """
-            featureCounts -a {genome_gff} -F GTF -t exon -g gene_id \
+            featureCounts -a {genome_gff} -F GFF -t exon -g gene_id \
             -o {output.counts} -s 0 -T {threads} {input.bam}
         """
 
 rule multiqc:
     input:
-        fastqc_zip = expand("results/fastqc/{sample}_fastqc.zip", sample=samples),
-        trimmed_zip = expand("results/fastqc/{sample}_fq_fastqc.zip", sample=samples),
-        alignment_summary = expand("results/tophat/{sample}/align_summary_{sample}.txt", sample=samples),
-        counts_summary = "results/counts.txt.summary"
+        expand("results/fastqc/{sample}_raw_fastqc.zip", sample=samples),
+        expand("results/fastqc/{sample}_trimmed_fastqc.zip", sample=samples),
+        expand("results/tophat/{sample}/align_summary_{sample}.txt", sample=samples),
+        "results/counts.txt.summary"
     output:
-        html = "results/multiqc_report.html",
-        data = directory("results/multiqc_data")
+        "results/multiqc_report.html",
+        directory("results/multiqc_data")
     log:
         "logs/multiqc.log"
     conda: "envs/preprocess_rnaseq.yaml"
     shell:
         """
-        multiqc results/ -o results/ > {log} 2>&1
+            multiqc --outdir results/ {input}
         """
